--- a/TODO
+++ b/TODO
@@ -1,6 +1,5 @@
 General
-[ ] Add cmake to buişd
+[ ] Add cmake to build
 [ ] Add Test
 [ ] Write a description
 [ ] GOAL 1 -> Basic TCP and UDP
-    [ ]
